---------------------------------------------------------------------------------------------------
Version: 0.12.0
Date: 24. 11. 2020
  Added:
    - Support for Factorio 1.1
  Removed:
    - Support for Factorio 1.0 (use Dectorio version 0.11.1 instead)
    - Signs (use Industrial Display Plates or Text Plates as a replacement)
---------------------------------------------------------------------------------------------------
Version: 0.11.1
Date: 24. 11. 2020
  Locales:
    - Updated German translation (thanks to adoa)
---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: 17. 11. 2020
  Added:
    - Support for Factorio 1.0
    - New mod setting to toggle whether decoratives are automatically removed when new entities are built
    - Grid concrete recipe now matches concrete recipe when AAI Industry mod is present
  Changed:
    - Signs can no longer be crafted as sign support will be removed in a future release (use Industrial Display Plates or Text Plates as a replacement). Disable the sign compatibility mod setting to remove sign support from existing saves.
  Removed:
    - Support for Factorio 0.18 (use Dectorio version 0.10.9 instead)
    - Support for Industrial Revolution 1.x mod
    - Dependencies for third party mods that are no longer being actively maintained
  Locales:
    - Updated Hungarian translation (thanks to mmnetworkteam)
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.10.9
Date: 02. 07. 2020
  Bugfixes:
    - Fixed a conflict with H2O mod that occurred if H2O was loaded after Dectorio at runtime
    - Fixed an issue when using Transport Drones mod where the Lawnmower would remove corpses that are required for the transport depots to function
  Locales:
    - Updated Portuguese, Brazilian translation (thanks to Unknow0059)