@@ -3,6 +3,8 @@ Version: 0.12.0
 Date: 24. 11. 2020
   Added:
     - Support for Factorio 1.1
+  Changed:
+    - Re-ordered signal colours to maintain vanilla priority order (thanks to dbiser99)
   Removed:
     - Support for Factorio 1.0 (use Dectorio version 0.11.1 instead)
     - Signs (use Industrial Display Plates or Text Plates as a replacement)
